# Intellihub

./: .env.example  .gitignore  AZURE_SETUP.md  LOCAL_QUICKSTART.md  README.md  SETUP_RUN_AND_TEST.md  function_app.py  local.settings.sample.json  main.py  pyproject.toml  requirements.txt
.dist/: smoke-meeting.txt
.github/workflows/: azure-phase1.yml
infra/: main.bicep
infra/modules/: closedloop-resources.bicep
plans/: migration-plan.md
scripts/: azure_prep_checklist.ps1  run_local.ps1  setup_local.ps1  test_all.ps1
src/closedloop_os/: api.py  classification.py  config.py  intelligence.py  mcp_server.py  messaging.py  models.py  persistence.py  pipeline.py  search.py  secrets.py  security.py  transcripts.py  ui.py
src/closedloop_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/closedloop_os/mappers/: __init__.py  confluence.py  github.py  jira.py  linear.py  notion.py  slack.py  zendesk.py
src/closedloop_os/services/: __init__.py  github_ingest.py  notion_sync.py  raw_ingest.py
tests/: test_classification_pipeline.py  test_github_mapping.py  test_github_webhook.py  test_intelligence.py  test_jira_confluence_connectors.py  test_linear_connector.py  test_semantic_pipeline.py  test_slack_connector.py  test_zendesk_and_meetings.py
